packages/Pagination/Pagination.scss
@import '~@tds/core-responsive/responsive';
@import '~@tds/core-colours/colours';

.container {
  opacity: 1;
}

.controls {
  clear: both;
  display: flex;
  margin-top: 20px;
  position: relative;
  justify-content: center;
  width: 100%;
}

.next, .nextHidden, .previous, .previousHidden {
  color: $color-telus-purple;
  padding: 0 8px;
  font-size: 1rem;
  line-height: 16px;
  @include mq($from: md) {
    line-height: 22px;
  }
  button {
    color: $color-telus-purple;
    background-color: $color-white-lilac;
    border: none;
    width: 32px;
    height: 32px;
    text-align: center;
    cursor: pointer;
    @include mq($from: md) {
      background: none;
      width: auto;
      height: auto;
    }
    span.buttonLabel {
      display: none;
      @include mq($from: md) {
        display: inline-block;
      }
    }
  }
}

.nextHidden, .previousHidden {
  visibility: hidden;
}

.pagination {
  display: flex;
  li {
    display: inline-block;
    color: $color-telus-purple;
    background-color: $color-white-lilac;
    height: 32px;
    line-height: 29px;
    width: auto;
    min-width: 32px;
    @include mq($from: md) {
      border: 1px solid $color-white-lilac;
      min-width: 22px;
      height: 24px;
      line-height: 24px;
    }
    list-style: none;
    margin-right: 4px;
    text-align: center;

    button {
      background: none;
      border: none;
      color: $color-telus-purple;
      cursor: pointer;
      padding: 0 5px;
      min-width: 32px;
      width: auto;
      height: 32px;
      @include mq($from: md) {
        min-width: 22px;
        height: 24px;
      }
    }
    @include mq($from: md) {
      &:hover {
        border: 1px solid $color-telus-purple;
      }
    }
  }
  li.ellipsis {
    background-color: inherit;
    line-height: 22px;
    @include mq($from: md) {
      line-height: 15px;
    }
    border: none;
    &:hover {
      border: none;
    }
  }
  li.current {
    color: $color-white;
    line-height: 31px;
    @include mq($from: md) {
      border: 1px solid $color-telus-purple;
      line-height: 23px;
      min-width: 24px;
    }
    padding: 0 5px;
    background-color: $color-telus-purple;
  }
}

